Refactor: Enhance memory cleanup sections and improve prompt definitions in Llama 3.2 Vision Multi-Turn Debit Extractor notebook

--- a/notebooks/llama_multiturn_debit_extractor.ipynb
+++ b/notebooks/llama_multiturn_debit_extractor.ipynb
@@ -42,15 +42,28 @@
   },
   {
    "cell_type": "markdown",
-   "source": "## Pre-emptive Memory Cleanup\n\nOptional GPU memory cleanup to prevent OOM errors when switching between models.",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Pre-emptive Memory Cleanup\n",
+    "\n",
+    "Optional GPU memory cleanup to prevent OOM errors when switching between models."
+   ]
   },
   {
    "cell_type": "code",
-   "source": "# Optional: Pre-emptive memory cleanup (useful when switching models)\ntry:\n    from common.gpu_optimization import emergency_cleanup\n    print(\"🧹 Clearing GPU memory...\")\n    emergency_cleanup(verbose=False)\n    print(\"✅ Memory cleanup complete\")\nexcept ImportError:\n    print(\"⚠️ GPU optimization module not available - skipping cleanup\")",
-   "metadata": {},
    "execution_count": null,
-   "outputs": []
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: Pre-emptive memory cleanup (useful when switching models)\n",
+    "try:\n",
+    "    from common.gpu_optimization import emergency_cleanup\n",
+    "    print(\"🧹 Clearing GPU memory...\")\n",
+    "    emergency_cleanup(verbose=False)\n",
+    "    print(\"✅ Memory cleanup complete\")\n",
+    "except ImportError:\n",
+    "    print(\"⚠️ GPU optimization module not available - skipping cleanup\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,22 +125,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define chat_with_mllm Function\n",
+    "## Optional: Manual Memory Cleanup\n",
     "\n",
-    "This function encapsulates the multi-turn conversation pattern."
+    "Run this cell if you experience memory issues during the conversation. Not needed for normal operation on H200."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: Run this cell if you experience memory issues during conversation\n",
+    "import gc\n",
+    "\n",
+    "print(\"🧹 Manual memory cleanup...\")\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "# Show memory status\n",
+    "if torch.cuda.is_available():\n",
+    "    for i in range(torch.cuda.device_count()):\n",
+    "        allocated = torch.cuda.memory_allocated(i) / 1e9\n",
+    "        reserved = torch.cuda.memory_reserved(i) / 1e9\n",
+    "        print(f\"   GPU {i}: {allocated:.2f}GB allocated, {reserved:.2f}GB reserved\")\n",
+    "print(\"✅ Cleanup complete\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": "## Optional: Manual Memory Cleanup\n\nRun this cell if you experience memory issues during the conversation. Not needed for normal operation on H200.",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "source": "# Optional: Run this cell if you experience memory issues during conversation\nimport gc\n\nprint(\"🧹 Manual memory cleanup...\")\ngc.collect()\ntorch.cuda.empty_cache()\n\n# Show memory status\nif torch.cuda.is_available():\n    for i in range(torch.cuda.device_count()):\n        allocated = torch.cuda.memory_allocated(i) / 1e9\n        reserved = torch.cuda.memory_reserved(i) / 1e9\n        print(f\"   GPU {i}: {allocated:.2f}GB allocated, {reserved:.2f}GB reserved\")\nprint(\"✅ Cleanup complete\")",
    "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "## Define chat_with_mllm Function\n",
+    "\n",
+    "This function encapsulates the multi-turn conversation pattern."
+   ]
   },
   {
    "cell_type": "code",
@@ -219,29 +251,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initial Extraction (Turn 1)\n",
+    "## Define Conversation Prompts\n",
     "\n",
-    "Extract all transaction data from the bank statement image."
+    "All prompts are defined upfront for easy modification and review."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": "## Define Conversation Prompts\n\nAll prompts are defined upfront for easy modification and review.",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "source": "# Conversation prompts dictionary\nCONVERSATION_PROMPTS = {\n    \"turn_1_initial_extraction\": \"\"\"You are an expert document analyser specializing in Date Grouped Australian Bank Statement extraction.\nDate Grouped Bank Statements are date ordered, with one or more transactions for each date header.\nEvery transaction for a given date heading has a description, a debit/credit amount and finally a balance amount with a ' CR' suffix.\nExtract all balance amounts along with their ' CR' suffix, the transaction dates (from the date heading) and transaction descriptions,\nmaintaining the same date ordering as the image, with every transaction appearing on its own row and remembering that some date headings have more than one balance.\"\"\",\n    \n    \"turn_2_count_transactions\": \"How many transactions are shown in this bank statement?\",\n    \n    \"turn_3_extract_debits\": \"From your first response, extract ONLY the debit/withdrawal amounts (amounts paid out). List them in order, one per line.\",\n    \n    \"turn_4_verify_count\": \"How many debit/withdrawal transactions did you extract in your previous response?\",\n    \n    \"turn_5_total_debits\": \"What is the total sum of all debit/withdrawal amounts in this statement?\",\n    \n    \"turn_6_date_range\": \"What is the date range covered by this bank statement?\",\n    \n    \"turn_7_verify_consistency\": \"In your very first response, you extracted all transactions. Can you verify that the debit amounts you listed in turn 3 match the debit amounts from your first extraction?\"\n}\n\ndef display_prompts(prompts_dict):\n    \"\"\"Display all conversation prompts in a readable format.\"\"\"\n    print(\"=\" * 70)\n    print(\"CONVERSATION PROMPTS\")\n    print(\"=\" * 70)\n    for i, (key, prompt) in enumerate(prompts_dict.items(), 1):\n        # Format the key for display\n        turn_name = key.replace(\"_\", \" \").title()\n        print(f\"\\n{i}. {turn_name}\")\n        print(\"-\" * 70)\n        # Truncate long prompts for preview\n        preview = prompt if len(prompt) <= 200 else prompt[:197] + \"...\"\n        print(f\"{preview}\")\n    print(\"\\n\" + \"=\" * 70)\n    print(f\"Total prompts defined: {len(prompts_dict)}\")\n\n# Display the prompts\ndisplay_prompts(CONVERSATION_PROMPTS)\nprint(\"\\n✅ Conversation prompts defined and ready to use\")",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Image path\nimageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_009.png\"\n\n# Initialize conversation\nmessages = []\nimages = []\n\nprint(\"📸 Processing bank statement image...\")\nprint(f\"📝 Using prompt: turn_1_initial_extraction\")\n\nresponse1, messages, images = chat_with_mllm(\n    model, processor, \n    CONVERSATION_PROMPTS[\"turn_1_initial_extraction\"],\n    images_path=[imageName],\n    do_sample=False,\n    max_new_tokens=2000,\n    show_image=True,\n    messages=messages,\n    images=images\n)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 1 - INITIAL EXTRACTION:\")\nprint(\"=\" * 60)\nprint(response1)\nprint(\"=\" * 60)\n\n# Save initial extraction\nPath(\"llama_debit_extractor_initial.txt\").write_text(response1)\nprint(\"\\n✅ Initial extraction saved to llama_debit_extractor_initial.txt\")"
+   "source": [
+    "# Conversation prompts dictionary\n",
+    "CONVERSATION_PROMPTS = {\n",
+    "    \"turn_1_initial_extraction\": \"\"\"You are an expert document analyser specializing in Date Grouped Australian Bank Statement extraction.\n",
+    "Date Grouped Bank Statements are date ordered, with one or more transactions for each date header.\n",
+    "Every transaction for a given date heading has a description, a debit/credit amount and finally a balance amount with a ' CR' suffix.\n",
+    "Extract all balance amounts along with their ' CR' suffix, the transaction dates (from the date heading) and transaction descriptions,\n",
+    "maintaining the same date ordering as the image, with every transaction appearing on its own row and remembering that some date headings have more than one balance.\"\"\",\n",
+    "    \n",
+    "    \"turn_2_count_transactions\": \"How many transactions are shown in this bank statement?\",\n",
+    "    \n",
+    "    \"turn_3_extract_debits\": \"From your first response, extract ONLY the debit/withdrawal amounts (amounts paid out). List them in order, one per line.\",\n",
+    "    \n",
+    "    \"turn_4_verify_count\": \"How many debit/withdrawal transactions did you extract in your previous response?\",\n",
+    "    \n",
+    "    \"turn_5_total_debits\": \"What is the total sum of all debit/withdrawal amounts in this statement?\",\n",
+    "    \n",
+    "    \"turn_6_date_range\": \"What is the date range covered by this bank statement?\",\n",
+    "    \n",
+    "    \"turn_7_verify_consistency\": \"In your very first response, you extracted all transactions. Can you verify that the debit amounts you listed in turn 3 match the debit amounts from your first extraction?\"\n",
+    "}\n",
+    "\n",
+    "def display_prompts(prompts_dict):\n",
+    "    \"\"\"Display all conversation prompts in a readable format.\"\"\"\n",
+    "    print(\"=\" * 70)\n",
+    "    print(\"CONVERSATION PROMPTS\")\n",
+    "    print(\"=\" * 70)\n",
+    "    for i, (key, prompt) in enumerate(prompts_dict.items(), 1):\n",
+    "        # Format the key for display\n",
+    "        turn_name = key.replace(\"_\", \" \").title()\n",
+    "        print(f\"\\n{i}. {turn_name}\")\n",
+    "        print(\"-\" * 70)\n",
+    "        # Truncate long prompts for preview\n",
+    "        preview = prompt if len(prompt) <= 200 else prompt[:197] + \"...\"\n",
+    "        print(f\"{preview}\")\n",
+    "    print(\"\\n\" + \"=\" * 70)\n",
+    "    print(f\"Total prompts defined: {len(prompts_dict)}\")\n",
+    "\n",
+    "# Display the prompts\n",
+    "display_prompts(CONVERSATION_PROMPTS)\n",
+    "print(\"\\n✅ Conversation prompts defined and ready to use\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initial Extraction (Turn 1)\n",
+    "\n",
+    "Extract all transaction data from the bank statement image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image path\n",
+    "imageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_009.png\"\n",
+    "\n",
+    "# Initialize conversation\n",
+    "messages = []\n",
+    "images = []\n",
+    "\n",
+    "print(\"📸 Processing bank statement image...\")\n",
+    "print(f\"📝 Using prompt: turn_1_initial_extraction\")\n",
+    "\n",
+    "response1, messages, images = chat_with_mllm(\n",
+    "    model, processor, \n",
+    "    CONVERSATION_PROMPTS[\"turn_1_initial_extraction\"],\n",
+    "    images_path=[imageName],\n",
+    "    do_sample=False,\n",
+    "    max_new_tokens=2000,\n",
+    "    show_image=True,\n",
+    "    messages=messages,\n",
+    "    images=images\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 1 - INITIAL EXTRACTION:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response1)\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Save initial extraction\n",
+    "Path(\"llama_debit_extractor_initial.txt\").write_text(response1)\n",
+    "print(\"\\n✅ Initial extraction saved to llama_debit_extractor_initial.txt\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +363,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "print(f\"📝 Using prompt: turn_2_count_transactions\")\n\nresponse2, messages, images = chat_with_mllm(\n    model, processor,\n    CONVERSATION_PROMPTS[\"turn_2_count_transactions\"],\n    messages=messages, \n    images=images,\n    max_new_tokens=500\n)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 2 - TRANSACTION COUNT:\")\nprint(\"=\" * 60)\nprint(response2)\nprint(\"=\" * 60)"
+   "source": [
+    "print(f\"📝 Using prompt: turn_2_count_transactions\")\n",
+    "\n",
+    "response2, messages, images = chat_with_mllm(\n",
+    "    model, processor,\n",
+    "    CONVERSATION_PROMPTS[\"turn_2_count_transactions\"],\n",
+    "    messages=messages, \n",
+    "    images=images,\n",
+    "    max_new_tokens=500\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 2 - TRANSACTION COUNT:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response2)\n",
+    "print(\"=\" * 60)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,7 +393,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "print(f\"📝 Using prompt: turn_3_extract_debits\")\n\nresponse3, messages, images = chat_with_mllm(\n    model, processor,\n    CONVERSATION_PROMPTS[\"turn_3_extract_debits\"],\n    messages=messages,\n    images=images,\n    max_new_tokens=1000\n)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 3 - DEBIT AMOUNTS ONLY:\")\nprint(\"=\" * 60)\nprint(response3)\nprint(\"=\" * 60)\n\n# Save debit amounts\nPath(\"llama_debit_amounts.txt\").write_text(response3)\nprint(\"\\n✅ Debit amounts saved to llama_debit_amounts.txt\")"
+   "source": [
+    "print(f\"📝 Using prompt: turn_3_extract_debits\")\n",
+    "\n",
+    "response3, messages, images = chat_with_mllm(\n",
+    "    model, processor,\n",
+    "    CONVERSATION_PROMPTS[\"turn_3_extract_debits\"],\n",
+    "    messages=messages,\n",
+    "    images=images,\n",
+    "    max_new_tokens=1000\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 3 - DEBIT AMOUNTS ONLY:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response3)\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Save debit amounts\n",
+    "Path(\"llama_debit_amounts.txt\").write_text(response3)\n",
+    "print(\"\\n✅ Debit amounts saved to llama_debit_amounts.txt\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,7 +427,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "print(f\"📝 Using prompt: turn_4_verify_count\")\n\nresponse4, messages, images = chat_with_mllm(\n    model, processor,\n    CONVERSATION_PROMPTS[\"turn_4_verify_count\"],\n    messages=messages,\n    images=images,\n    max_new_tokens=500\n)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 4 - DEBIT COUNT:\")\nprint(\"=\" * 60)\nprint(response4)\nprint(\"=\" * 60)"
+   "source": [
+    "print(f\"📝 Using prompt: turn_4_verify_count\")\n",
+    "\n",
+    "response4, messages, images = chat_with_mllm(\n",
+    "    model, processor,\n",
+    "    CONVERSATION_PROMPTS[\"turn_4_verify_count\"],\n",
+    "    messages=messages,\n",
+    "    images=images,\n",
+    "    max_new_tokens=500\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 4 - DEBIT COUNT:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response4)\n",
+    "print(\"=\" * 60)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,7 +457,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "print(f\"📝 Using prompt: turn_5_total_debits\")\n\nresponse5, messages, images = chat_with_mllm(\n    model, processor,\n    CONVERSATION_PROMPTS[\"turn_5_total_debits\"],\n    messages=messages,\n    images=images,\n    max_new_tokens=500\n)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 5 - TOTAL DEBITS:\")\nprint(\"=\" * 60)\nprint(response5)\nprint(\"=\" * 60)"
+   "source": [
+    "print(f\"📝 Using prompt: turn_5_total_debits\")\n",
+    "\n",
+    "response5, messages, images = chat_with_mllm(\n",
+    "    model, processor,\n",
+    "    CONVERSATION_PROMPTS[\"turn_5_total_debits\"],\n",
+    "    messages=messages,\n",
+    "    images=images,\n",
+    "    max_new_tokens=500\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 5 - TOTAL DEBITS:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response5)\n",
+    "print(\"=\" * 60)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,7 +487,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "print(f\"📝 Using prompt: turn_6_date_range\")\n\nresponse6, messages, images = chat_with_mllm(\n    model, processor,\n    CONVERSATION_PROMPTS[\"turn_6_date_range\"],\n    messages=messages,\n    images=images,\n    max_new_tokens=500\n)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 6 - DATE RANGE:\")\nprint(\"=\" * 60)\nprint(response6)\nprint(\"=\" * 60)"
+   "source": [
+    "print(f\"📝 Using prompt: turn_6_date_range\")\n",
+    "\n",
+    "response6, messages, images = chat_with_mllm(\n",
+    "    model, processor,\n",
+    "    CONVERSATION_PROMPTS[\"turn_6_date_range\"],\n",
+    "    messages=messages,\n",
+    "    images=images,\n",
+    "    max_new_tokens=500\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 6 - DATE RANGE:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response6)\n",
+    "print(\"=\" * 60)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,7 +517,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "print(f\"📝 Using prompt: turn_7_verify_consistency\")\n\nresponse7, messages, images = chat_with_mllm(\n    model, processor,\n    CONVERSATION_PROMPTS[\"turn_7_verify_consistency\"],\n    messages=messages,\n    images=images,\n    max_new_tokens=1000\n)\n\nprint(\"\\n\" + \"=\" * 60)\nprint(\"TURN 7 - VERIFICATION:\")\nprint(\"=\" * 60)\nprint(response7)\nprint(\"=\" * 60)"
+   "source": [
+    "print(f\"📝 Using prompt: turn_7_verify_consistency\")\n",
+    "\n",
+    "response7, messages, images = chat_with_mllm(\n",
+    "    model, processor,\n",
+    "    CONVERSATION_PROMPTS[\"turn_7_verify_consistency\"],\n",
+    "    messages=messages,\n",
+    "    images=images,\n",
+    "    max_new_tokens=1000\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 7 - VERIFICATION:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response7)\n",
+    "print(\"=\" * 60)"
+   ]
   },
   {
    "cell_type": "markdown",
