✨ Update conversation prompts and restructure initial extraction flow in Llama 3.2 Vision Multi-Turn Flat Debit Extractor notebook

--- a/notebooks/llama_multiturn_flat_debit_extractor.ipynb
+++ b/notebooks/llama_multiturn_flat_debit_extractor.ipynb
@@ -265,13 +265,30 @@
    "source": [
     "# Conversation prompts dictionary\n",
     "CONVERSATION_PROMPTS = {\n",
+    "    \"turn_0_identify_headers\": \"\"\"Look at the bank statement image.\n",
+    "\n",
+    "Find the transaction table where transactions are listed.\n",
+    "\n",
+    "At the top of this table, there is a row of column headers.\n",
+    "\n",
+    "Your task: List ALL the column headers from this table, starting from the left edge and moving to the right edge.\n",
+    "\n",
+    "IMPORTANT: The leftmost column is usually \"Date\" or \"Date of Transaction\". Start there and read every header moving right.\n",
+    "\n",
+    "Include EVERY header you see. Do not skip any.\n",
+    "\n",
+    "Output Format:\n",
+    "- TRANSACTION TABLE HEADERS (reading left to right):\n",
+    "- [Write ONLY the headers you actually see in the image, separated by commas]\n",
+    "- If no table headers visible, write: NO_HEADERS\"\"\",\n",
+    "    \n",
     "    \"turn_1_initial_extraction\": \"\"\"Step 1: Extract ONLY the table of transaction data from this Australian bank statement in markdown format.\"\"\",\n",
     "    \n",
     "    \"turn_2_select_columns\": \"\"\"STEP 2: From the table you extracted in STEP 1, extract only the \"Date | Description | Withdrawal\" columns\"\"\",\n",
     "    \n",
     "    \"turn_3_extract_debits\": \"\"\"STEP 3: From the table you extracted in STEP 2, remove any row NOT showing an amount (i.e. having an empty cell) in the \"Withdrawal\" column.\"\"\",\n",
     "    \n",
-    "    \"turn_4_date_range\": \"What is the date range covered by this bank statement?\"\n",
+    "    \"turn_4_date_range\": \"\"\"Extract earliest date and the latest date from the \"Date\" colum. Express your answer in the format \"STATEMENT_DATE_RANGE: dd/mm/yyyy - dd/mm/yyyy\" \"\"\"\n",
     "}\n",
     "\n",
     "def display_prompts(prompts_dict):\n",
@@ -299,9 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Turn 1 - Initial Extraction\n",
-    "\n",
-    "Extract all transaction data from the bank statement image."
+    "# Select Image"
    ]
   },
   {
@@ -311,34 +326,78 @@
    "outputs": [],
    "source": [
     "# Image path\n",
-    "imageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_003.png\"\n",
+    "imageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_003.png\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Turn 0: Identify Table Headers\n",
     "\n",
+    "First, identify all column headers in the transaction table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialize conversation\n",
     "messages = []\n",
     "images = []\n",
     "\n",
     "print(\"📸 Processing bank statement image...\")\n",
+    "print(f\"📝 Using prompt: turn_0_identify_headers\")\n",
+    "\n",
+    "response0, messages, images = chat_with_mllm(\n",
+    "    model, \n",
+    "    processor, \n",
+    "    CONVERSATION_PROMPTS[\"turn_0_identify_headers\"],\n",
+    "    images_path=[imageName],\n",
+    "    do_sample=False,\n",
+    "    max_new_tokens=500,\n",
+    "    show_image=True,\n",
+    "    messages=messages,\n",
+    "    images=images\n",
+    ")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"TURN 0 - IDENTIFY TABLE HEADERS:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(response0)\n",
+    "print(\"=\" * 60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Turn 1: Extract Transaction Table\n",
+    "\n",
+    "Extract the complete transaction table in markdown format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f\"📝 Using prompt: turn_1_initial_extraction\")\n",
     "\n",
     "response1, messages, images = chat_with_mllm(\n",
     "    model, \n",
     "    processor, \n",
     "    CONVERSATION_PROMPTS[\"turn_1_initial_extraction\"],\n",
-    "    images_path=[imageName],\n",
-    "    do_sample=False,\n",
-    "    max_new_tokens=3000,\n",
-    "    show_image=True,\n",
     "    messages=messages,\n",
-    "    images=images\n",
+    "    images=images,\n",
+    "    do_sample=False,\n",
+    "    max_new_tokens=3000\n",
     ")\n",
     "\n",
     "display(Markdown(response1))\n",
-    "\n",
-    "# print(\"\\n\" + \"=\" * 60)\n",
-    "# print(\"TURN 1 - INITIAL EXTRACTION:\")\n",
-    "# print(\"=\" * 60)\n",
-    "# print(response1)\n",
-    "# print(\"=\" * 60)\n",
     "\n",
     "# Save initial extraction\n",
     "Path(\"llama_debit_extractor_initial.txt\").write_text(response1)\n",
@@ -426,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"📝 Using prompt: turn_6_date_range\")\n",
+    "print(f\"📝 Using prompt: turn_4_date_range\")\n",
     "\n",
     "response4, messages, images = chat_with_mllm(\n",
     "    model, processor,\n",
