Refactor APS5_EOI.md and llama_batch.ipynb for clarity and functionality
- Updated the motivation section in APS5_EOI.md to align with ATO's AI Strategy and highlighted recent work on vision-language models.
- Enhanced STAR examples in APS5_EOI.md for clearer context and results, emphasizing the impact of findings on ATO's investment strategy.
- Modified llama_batch.ipynb to enable image preprocessing by default and streamlined the image discovery and filtering process.
- Removed redundant code in llama_batch.ipynb to improve readability and maintainability, ensuring a cleaner architecture for batch processing.

--- a/llama_batch.ipynb
+++ b/llama_batch.ipynb
@@ -159,7 +159,7 @@
     "    # SAVE_PREPROCESSED: Save preprocessed images to disk for inspection (debugging)\n",
     "    # PREPROCESSED_DIR: Directory for saved preprocessed images (if SAVE_PREPROCESSED=True)\n",
     "    # ============================================================================\n",
-    "    'ENABLE_PREPROCESSING': False,  # Set to True to enable preprocessing\n",
+    "    'ENABLE_PREPROCESSING': True,  # Set to True to enable preprocessing\n",
     "    'PREPROCESSING_MODE': 'adaptive',  # Options: 'light', 'moderate', 'aggressive', 'adaptive', 'recommended'\n",
     "    'SAVE_PREPROCESSED': False,  # Save preprocessed images for inspection\n",
     "    'PREPROCESSED_DIR': None,  # Directory for preprocessed images (None = auto: 'preprocessed_images')\n",
@@ -379,123 +379,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Cell 6\n",
-    "# Discover and filter images - Handle both absolute and relative paths\n",
-    "\n",
-    "# Convert DATA_DIR to Path and handle absolute/relative paths\n",
-    "data_dir = Path(CONFIG['DATA_DIR'])\n",
-    "if not data_dir.is_absolute():\n",
-    "    # If relative, make it relative to current working directory\n",
-    "    data_dir = Path.cwd() / data_dir\n",
-    "\n",
-    "# Discover images from the resolved data directory\n",
-    "all_images = discover_images(str(data_dir))\n",
-    "\n",
-    "# ============================================================================\n",
-    "# IMAGE PREPROCESSING (Optional)\n",
-    "# ============================================================================\n",
-    "# Apply preprocessing if enabled in CONFIG\n",
-    "if CONFIG['ENABLE_PREPROCESSING']:\n",
-    "    import tempfile\n",
-    "    from common.image_preprocessing import (\n",
-    "        enhance_statement_quality,\n",
-    "        enhance_for_llama,\n",
-    "        preprocess_statement_for_llama,\n",
-    "        adaptive_enhance,\n",
-    "        preprocess_recommended\n",
-    "    )\n",
-    "    \n",
-    "    # Map preprocessing mode to function\n",
-    "    preprocess_functions = {\n",
-    "        'light': enhance_statement_quality,\n",
-    "        'moderate': enhance_for_llama,\n",
-    "        'aggressive': preprocess_statement_for_llama,\n",
-    "        'adaptive': adaptive_enhance,\n",
-    "        'recommended': preprocess_recommended\n",
-    "    }\n",
-    "    \n",
-    "    preprocess_fn = preprocess_functions[CONFIG['PREPROCESSING_MODE']]\n",
-    "    preprocessed_images = []\n",
-    "    \n",
-    "    rprint(f\"[cyan]🔧 Preprocessing {len(all_images)} images (mode: {CONFIG['PREPROCESSING_MODE']})[/cyan]\")\n",
-    "    \n",
-    "    # Setup preprocessed directory if saving\n",
-    "    if CONFIG['SAVE_PREPROCESSED']:\n",
-    "        preprocessed_dir = Path(CONFIG['PREPROCESSED_DIR'] or 'preprocessed_images')\n",
-    "        preprocessed_dir.mkdir(parents=True, exist_ok=True)\n",
-    "        rprint(f\"[cyan]📁 Saving preprocessed images to: {preprocessed_dir}[/cyan]\")\n",
-    "    \n",
-    "    # Preprocess each image\n",
-    "    for img_path in all_images:\n",
-    "        try:\n",
-    "            # Apply preprocessing function\n",
-    "            preprocessed_img = preprocess_fn(img_path)\n",
-    "            \n",
-    "            if CONFIG['SAVE_PREPROCESSED']:\n",
-    "                # Save to disk\n",
-    "                preprocessed_path = preprocessed_dir / Path(img_path).name\n",
-    "                preprocessed_img.save(preprocessed_path)\n",
-    "                preprocessed_images.append(str(preprocessed_path))\n",
-    "            else:\n",
-    "                # Save to temporary file (will be cleaned up automatically)\n",
-    "                with tempfile.NamedTemporaryFile(suffix='.png', delete=False) as tmp:\n",
-    "                    preprocessed_img.save(tmp.name)\n",
-    "                    preprocessed_images.append(tmp.name)\n",
-    "        except Exception as e:\n",
-    "            rprint(f\"[yellow]⚠️  Preprocessing failed for {Path(img_path).name}: {e}[/yellow]\")\n",
-    "            rprint(f\"[yellow]   Using original image instead[/yellow]\")\n",
-    "            preprocessed_images.append(img_path)  # Fallback to original\n",
-    "    \n",
-    "    # Replace original image paths with preprocessed paths\n",
-    "    all_images = preprocessed_images\n",
-    "    rprint(f\"[green]✅ Preprocessing complete[/green]\")\n",
-    "else:\n",
-    "    rprint(\"[dim]⏭️  Preprocessing disabled - using original images[/dim]\")\n",
-    "\n",
-    "# ============================================================================\n",
-    "# GROUND TRUTH LOADING\n",
-    "# ============================================================================\n",
-    "# Conditionally load ground truth only when not in inference-only mode\n",
-    "ground_truth = {}\n",
-    "if not CONFIG['INFERENCE_ONLY'] and CONFIG['GROUND_TRUTH']:\n",
-    "    # Convert GROUND_TRUTH to Path and handle absolute/relative paths\n",
-    "    ground_truth_path = Path(CONFIG['GROUND_TRUTH'])\n",
-    "    if not ground_truth_path.is_absolute():\n",
-    "        # If relative, make it relative to current working directory\n",
-    "        ground_truth_path = Path.cwd() / ground_truth_path\n",
-    "    \n",
-    "    # Load ground truth from the resolved path\n",
-    "    ground_truth = load_ground_truth(str(ground_truth_path), verbose=CONFIG['VERBOSE'])\n",
-    "    \n",
-    "    rprint(f\"[green]✅ Ground truth loaded for {len(ground_truth)} images[/green]\")\n",
-    "else:\n",
-    "    rprint(\"[cyan]📋 Running in inference-only mode (no ground truth required)[/cyan]\")\n",
-    "\n",
-    "# Apply filters (only if ground truth is available)\n",
-    "if CONFIG['DOCUMENT_TYPES'] and ground_truth:\n",
-    "    filtered = []\n",
-    "    for img in all_images:\n",
-    "        img_name = Path(img).name\n",
-    "        if img_name in ground_truth:\n",
-    "            doc_type = ground_truth[img_name].get('DOCUMENT_TYPE', '').lower()\n",
-    "            if any(dt.lower() in doc_type for dt in CONFIG['DOCUMENT_TYPES']):\n",
-    "                filtered.append(img)\n",
-    "    all_images = filtered\n",
-    "\n",
-    "if CONFIG['MAX_IMAGES']:\n",
-    "    all_images = all_images[:CONFIG['MAX_IMAGES']]\n",
-    "\n",
-    "rprint(f\"[bold green]Ready to process {len(all_images)} images[/bold green]\")\n",
-    "rprint(f\"[cyan]Data directory: {data_dir}[/cyan]\")\n",
-    "if not CONFIG['INFERENCE_ONLY'] and CONFIG['GROUND_TRUTH']:\n",
-    "    rprint(f\"[cyan]Ground truth: {ground_truth_path}[/cyan]\")\n",
-    "rprint(f\"[cyan]Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}[/cyan]\")\n",
-    "for i, img in enumerate(all_images[:5], 1):\n",
-    "    print(f\"  {i}. {Path(img).name}\")\n",
-    "if len(all_images) > 5:\n",
-    "    print(f\"  ... and {len(all_images) - 5} more\")"
-   ]
+   "source": "#Cell 6\n# Discover and filter images - Handle both absolute and relative paths\n\n# Convert DATA_DIR to Path and handle absolute/relative paths\ndata_dir = Path(CONFIG['DATA_DIR'])\nif not data_dir.is_absolute():\n    # If relative, make it relative to current working directory\n    data_dir = Path.cwd() / data_dir\n\n# Discover images from the resolved data directory\nall_images = discover_images(str(data_dir))\n\n# ============================================================================\n# IMAGE PREPROCESSING (Optional)\n# ============================================================================\n# Apply preprocessing if enabled in CONFIG\nif CONFIG['ENABLE_PREPROCESSING']:\n    import tempfile\n    from common.image_preprocessing import (\n        enhance_statement_quality,\n        enhance_for_llama,\n        preprocess_statement_for_llama,\n        adaptive_enhance,\n        preprocess_recommended\n    )\n    \n    # Map preprocessing mode to function\n    preprocess_functions = {\n        'light': enhance_statement_quality,\n        'moderate': enhance_for_llama,\n        'aggressive': preprocess_statement_for_llama,\n        'adaptive': adaptive_enhance,\n        'recommended': preprocess_recommended\n    }\n    \n    preprocess_fn = preprocess_functions[CONFIG['PREPROCESSING_MODE']]\n    preprocessed_images = []\n    \n    rprint(f\"[cyan]🔧 Preprocessing {len(all_images)} images (mode: {CONFIG['PREPROCESSING_MODE']})[/cyan]\")\n    \n    # Setup output directory for preprocessed images\n    if CONFIG['SAVE_PREPROCESSED']:\n        # Save to persistent directory\n        preprocessed_dir = Path(CONFIG['PREPROCESSED_DIR'] or 'preprocessed_images')\n        preprocessed_dir.mkdir(parents=True, exist_ok=True)\n        rprint(f\"[cyan]📁 Saving preprocessed images to: {preprocessed_dir}[/cyan]\")\n    else:\n        # Save to temporary directory (preserves original filenames)\n        preprocessed_dir = Path(tempfile.mkdtemp(prefix='preprocessed_'))\n        rprint(f\"[cyan]📁 Using temporary directory: {preprocessed_dir}[/cyan]\")\n    \n    # Preprocess each image\n    for img_path in all_images:\n        original_filename = Path(img_path).name\n        \n        try:\n            # Apply preprocessing function\n            preprocessed_img = preprocess_fn(img_path)\n            \n            # Save with original filename (either to persistent or temp directory)\n            preprocessed_path = preprocessed_dir / original_filename\n            preprocessed_img.save(preprocessed_path)\n            preprocessed_images.append(str(preprocessed_path))\n            \n        except Exception as e:\n            rprint(f\"[yellow]⚠️  Preprocessing failed for {original_filename}: {e}[/yellow]\")\n            rprint(f\"[yellow]   Using original image instead[/yellow]\")\n            preprocessed_images.append(img_path)  # Fallback to original\n    \n    # Replace original image paths with preprocessed paths\n    all_images = preprocessed_images\n    rprint(f\"[green]✅ Preprocessing complete ({len(preprocessed_images)} images)[/green]\")\nelse:\n    rprint(\"[dim]⏭️  Preprocessing disabled - using original images[/dim]\")\n\n# ============================================================================\n# GROUND TRUTH LOADING\n# ============================================================================\n# Conditionally load ground truth only when not in inference-only mode\nground_truth = {}\nif not CONFIG['INFERENCE_ONLY'] and CONFIG['GROUND_TRUTH']:\n    # Convert GROUND_TRUTH to Path and handle absolute/relative paths\n    ground_truth_path = Path(CONFIG['GROUND_TRUTH'])\n    if not ground_truth_path.is_absolute():\n        # If relative, make it relative to current working directory\n        ground_truth_path = Path.cwd() / ground_truth_path\n    \n    # Load ground truth from the resolved path\n    ground_truth = load_ground_truth(str(ground_truth_path), verbose=CONFIG['VERBOSE'])\n    \n    rprint(f\"[green]✅ Ground truth loaded for {len(ground_truth)} images[/green]\")\nelse:\n    rprint(\"[cyan]📋 Running in inference-only mode (no ground truth required)[/cyan]\")\n\n# Apply filters (only if ground truth is available)\nif CONFIG['DOCUMENT_TYPES'] and ground_truth:\n    filtered = []\n    for img in all_images:\n        img_name = Path(img).name\n        if img_name in ground_truth:\n            doc_type = ground_truth[img_name].get('DOCUMENT_TYPE', '').lower()\n            if any(dt.lower() in doc_type for dt in CONFIG['DOCUMENT_TYPES']):\n                filtered.append(img)\n    all_images = filtered\n\nif CONFIG['MAX_IMAGES']:\n    all_images = all_images[:CONFIG['MAX_IMAGES']]\n\nrprint(f\"[bold green]Ready to process {len(all_images)} images[/bold green]\")\nrprint(f\"[cyan]Data directory: {data_dir}[/cyan]\")\nif not CONFIG['INFERENCE_ONLY'] and CONFIG['GROUND_TRUTH']:\n    rprint(f\"[cyan]Ground truth: {ground_truth_path}[/cyan]\")\nrprint(f\"[cyan]Mode: {'Inference-only' if CONFIG['INFERENCE_ONLY'] else 'Evaluation mode'}[/cyan]\")\nfor i, img in enumerate(all_images[:5], 1):\n    print(f\"  {i}. {Path(img).name}\")\nif len(all_images) > 5:\n    print(f\"  ... and {len(all_images) - 5} more\")"
   },
   {
    "cell_type": "markdown",
@@ -545,32 +429,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Cell 7\n",
-    "# Initialize batch processor with simplified, clean architecture\n",
-    "processor = BatchDocumentProcessor(\n",
-    "    model=model,\n",
-    "    processor=processor,\n",
-    "    prompt_config=PROMPT_CONFIG,\n",
-    "    ground_truth_csv=CONFIG['GROUND_TRUTH'],  # None in inference-only mode\n",
-    "    console=console,\n",
-    "    enable_math_enhancement=CONFIG['ENABLE_MATH_ENHANCEMENT']\n",
-    ")\n",
-    "\n",
-    "# Process batch with CONFIG verbose setting for detailed field comparison\n",
-    "batch_results, processing_times, document_types_found = processor.process_batch(\n",
-    "    all_images, verbose=CONFIG['VERBOSE']\n",
-    ")\n",
-    "\n",
-    "# Brief summary\n",
-    "rprint(f\"[bold green]✅ Processed {len(batch_results)} images[/bold green]\")\n",
-    "rprint(f\"[cyan]Average time: {np.mean(processing_times):.2f}s[/cyan]\")\n",
-    "if CONFIG['INFERENCE_ONLY']:\n",
-    "    rprint(\"[cyan]📋 Inference-only mode: No accuracy evaluation performed[/cyan]\")\n",
-    "else:\n",
-    "    avg_accuracy = np.mean([r.get('evaluation', {}).get('overall_accuracy', 0) * 100 for r in batch_results if 'evaluation' in r])\n",
-    "    rprint(f\"[cyan]Average accuracy: {avg_accuracy:.1f}%[/cyan]\")"
-   ]
+   "source": "#Cell 7\n# Initialize batch processor with simplified, clean architecture\nprocessor = BatchDocumentProcessor(\n    model=model,\n    processor=processor,\n    prompt_config=PROMPT_CONFIG,\n    ground_truth_csv=CONFIG['GROUND_TRUTH'],  # None in inference-only mode\n    console=console,\n    enable_math_enhancement=CONFIG['ENABLE_MATH_ENHANCEMENT']\n)\n\n# Process batch with CONFIG verbose setting for detailed field comparison\nbatch_results, processing_times, document_types_found = processor.process_batch(\n    all_images, verbose=CONFIG['VERBOSE']\n)\n\n# Brief summary\nrprint(f\"[bold green]✅ Processed {len(batch_results)} images[/bold green]\")\nrprint(f\"[cyan]Average time: {np.mean(processing_times):.2f}s[/cyan]\")\nif CONFIG['INFERENCE_ONLY']:\n    rprint(\"[cyan]📋 Inference-only mode: No accuracy evaluation performed[/cyan]\")\nelse:\n    avg_accuracy = np.mean([r.get('evaluation', {}).get('overall_accuracy', 0) * 100 for r in batch_results if 'evaluation' in r])\n    rprint(f\"[cyan]Average accuracy: {avg_accuracy:.1f}%[/cyan]\")"
   },
   {
    "cell_type": "markdown",
